Mon Jun 13 23:05:01 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/unixsocket.c (unix_send_io): race condition fixed.
	  (unix_recv_io): ditto.
	  fixed by Eric Wong.  [ruby-core:35574]

	* test/socket/test_unix.rb: test added for above problem.

Thu May 12 12:24:22 2011  Nobuhiro Iwamatsu  <iwamatsu@nigauri.org>

        * ext/openssl/ossl_ssl.c: By trunk@31346, function check of SSLv2 is executed.
        However, the problem is not revised in this.
        This adds the control of using function of SSLv2 in made macro by function check.

Mon Jun 13 18:33:04 2011  Tanaka Akira  <akr@fsij.org>

	* lib/securerandom.rb (SecureRandom.random_bytes): modify PRNG state
	  to prevent random number sequence repeatation at forked child
	  process which has same pid.
	  reported by Eric Wong.  [ruby-core:35765]

Sat Jun 11 18:02:09 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_getc): should be 7bit if ascii.  fixes #4557

Sat Jun 11 16:28:25 2011  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/formatters/pretty.rb
	  (REXML::Formatters::Pretty#write_text),
	  test/rexml/test_core.rb
	  (Tester#test_pretty_format_long_text_finite): don't ignore
	  'width' parameter in pretty formatter. fixes #4498
	  Reported by Michael Frasca. Thanks!!!

Sat Jun 11 16:04:03 2011  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/xpathparser.rb
	  (REXML::Parsers::XPathParser#parse),
	  test/rexml/test_elements.rb
	  (ElementsTester#test_each_with_frozen_condition):
	  don't modify original XPath. fixes #4164
	  Reported by Pavel Shved. Thanks!!!

Sat Jun 11 16:04:03 2011  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/xpathparser.rb
	  (REXML::Parsers::XPathParser#parse),
	  test/rexml/test_elements.rb
	  (ElementsTester::test_each_with_frozen_condition):
	  don't modify original XPath. fixes #4164
	  Reported by Pavel Shved. Thanks!!!

Mon Jun  6 09:39:43 2011  Aaron Patterson <aaron@tenderlovemaking.com>
